--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,13 @@
 
 
-<div class="request-bar-container"></div>
+<div class="request-bar-container row">
+    <div class="btn-container col">
+        <button type="button" class="btn btn-outline-light top-btns">Request an Estimate</button>
+    </div>
+    <div class="btn-container col">
+        <button type="button" class="btn btn-outline-light top-btns">Set an Appointment</button>
+    </div>
+</div>
 
 <div class="logo-container row">
     <div class="col"></div>
