--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,7 +1,4 @@
-<div class="text-center bg-image rounded-3" style="
-    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
-    height: 400px; background-size: cover;
-  ">
+<div class="text-center bg-image rounded-3 hero-image">
     <div class="mask">
         <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
@@ -13,7 +10,7 @@
                 <p class="mb-3 openHours">
                     <span class="bold">Hours:</span>
                     <span class="status bold" [ngClass]="{ 'openStatus': isOpen, 'closedStatus': !isOpen }">{{ isOpen ?
-                        'Open' : 'Closed' }}</span>
+                        ' Open' : 'Closed' }}</span>
                     <span>{{ openingTime }}</span>
                 </p>
             </div>
