--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -1,5 +1,5 @@
 .mask {
-    background-color: rgb(0, 0, 0, .5);
+    background-color: rgb(0, 0, 0, .3);
     height: 100%;
     width: 100%;
 }
@@ -9,7 +9,7 @@
 }
 
 .openStatus {
-    color: green;
+    color: #3ac280;
     font-weight: bold;
     /* Green color for open status */
 }
@@ -18,4 +18,11 @@
     color: red;
     font-weight: bold;
     /* Red color for closed status */
+}
+
+.hero-image{
+    background-image: url('../../assets/hero-image.webp');
+    height: 600px; 
+    background-size: cover; 
+    background-position: center center;
 }
