--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,6 @@
 .logo-container{
     text-align: center;
+    margin: 0;
 }
 
 #logo{
@@ -8,8 +9,10 @@
 }
 
 .request-bar-container{
-    background-color: #2c0e3c;
+    /* background-color: #2c0e3c; */
+    background-image: linear-gradient(90deg,#2e0e3f 0,#15051e 100%)!important;
     height: 64px;
+    margin: 0;
 }
 
 .number-container{
@@ -24,9 +27,15 @@
 
 .top-btns{
     width: 50%;
+    border-width: 2px;
 }
 
 .btn-container{
     margin: auto;
     text-align: center;
+
+}
+
+.bar{
+    background-color: white;
 }
