--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,14 @@
 
-
+<header class="bar sticky-top flex-wrap align-items-center justify-content-center justify-content-md-between mb-4 border-bottom">
 <div class="request-bar-container row">
+    <div class="col"></div>
     <div class="btn-container col">
         <button type="button" class="btn btn-outline-light top-btns">Request an Estimate</button>
     </div>
     <div class="btn-container col">
         <button type="button" class="btn btn-outline-light top-btns">Set an Appointment</button>
     </div>
+    <div class="col"></div>
 </div>
 
 <div class="logo-container row">
@@ -15,7 +17,7 @@
     <div class="col number-container"><p class="number-text">(914) 228-1500</p></div>
 </div>
 
-<header class="flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
