--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,68 +1,88 @@
+<header
+    class="bar sticky-top flex-wrap align-items-center justify-content-center justify-content-md-between mb-4 border-bottom">
 
-<header class="bar sticky-top flex-wrap align-items-center justify-content-center justify-content-md-between mb-4 border-bottom">
-<div class="request-bar-container row">
-    <div class="col"></div>
-    <div class="btn-container col">
-        <button type="button" class="btn btn-outline-light top-btns">Request an Estimate</button>
-    </div>
-    <div class="btn-container col">
-        <button type="button" class="btn btn-outline-light top-btns">Set an Appointment</button>
-    </div>
-    <div class="col"></div>
-</div>
 
-<div class="logo-container row">
-    <div class="col"></div>
-    <div class="col"><img class="col" id="logo" src="../../assets/king-logo.webp" alt=""></div>
-    <div class="col number-container"><p class="number-text">(914) 228-1500</p></div>
-</div>
+    <div class="request-bar-container row">
+        <div class="col socials">
+            <a class="links" href="#"><i class="bi bi-instagram social-logos"></i></a>
+            <a class="links" href="#"><i class="bi bi-facebook social-logos"></i></a>
+        </div>
+        <div class="col">
+
+        </div>
+        <div class="col socials phone-email">
+            <a class="links" href="#"><i class="bi bi-telephone social-logos"></i></a>
+            <p class="number-text">(914) 228-1500</p>
+            <p class="number-text">|</p>
+            <p class="number-text">julios2k91&#64;gmail.com</p>
+        </div>
+    </div>
+
+    <div class="logo-container row">
+        <div class="col request-appt-container">
+        </div>
+        <div class="col"><img class="col" id="logo" src="../../assets/king-logo.webp" alt=""></div>
+        <div class="col request-appt-container">
+
+        </div>
+    </div>
 
 
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Asphalt Services
-        </a>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Asphalt Paving Contractor</a></li>
-            <li><a class="dropdown-item" href="#">Driveway Paving</a></li>
-            <li><a class="dropdown-item" href="#">Driveway Resurfacing</a></li>
-            <li><a class="dropdown-item" href="#">Parking Lot Paving</a></li>
-            <li><a class="dropdown-item" href="#">Commercial Paving</a></li>
-            <li><a class="dropdown-item" href="#">Parking Lot Maintenance</a></li>
-            <li><a class="dropdown-item" href="#">Line Striping</a></li>
-        </ul>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Hardscaping Services
-        </a>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Patios</a></li>
-            <li><a class="dropdown-item" href="#">Retaining Walls</a></li>
-            <li><a class="dropdown-item" href="#">Walkways & Steps</a></li>
-            <li><a class="dropdown-item" href="#">Masonry</a></li>
-        </ul>
-    </li>
-    <li><a href="#" class="nav-link px-2 link-dark">Seal Coating</a></li>
-    <li><a href="#" class="nav-link px-2 link-dark">Request an Estimate</a></li>
-    <li><a href="#" class="nav-link px-2 link-dark">Gallery</a></li>
-    <li><a href="#" class="nav-link px-2 link-dark">Reviews</a></li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            About
-        </a>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Blog</a></li>
-            <li><a class="dropdown-item" href="#">FAQs</a></li>
-        </ul>
-    </li>
-    <li><a href="#" class="nav-link px-2 link-dark">Contact</a></li>
+        <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+        <li class="nav-item dropdown">
+            <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Asphalt Services
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Asphalt Paving Contractor</a></li>
+                <li><a class="dropdown-item" href="#">Driveway Paving</a></li>
+                <li><a class="dropdown-item" href="#">Driveway Resurfacing</a></li>
+                <li><a class="dropdown-item" href="#">Parking Lot Paving</a></li>
+                <li><a class="dropdown-item" href="#">Commercial Paving</a></li>
+                <li><a class="dropdown-item" href="#">Parking Lot Maintenance</a></li>
+                <li><a class="dropdown-item" href="#">Line Striping</a></li>
+            </ul>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Hardscaping Services
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Patios</a></li>
+                <li><a class="dropdown-item" href="#">Retaining Walls</a></li>
+                <li><a class="dropdown-item" href="#">Walkways & Steps</a></li>
+                <li><a class="dropdown-item" href="#">Masonry</a></li>
+            </ul>
+        </li>
+        <li><a href="#" class="nav-link px-2 link-dark">Seal Coating</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Gallery</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Reviews</a></li>
+        <li class="nav-item dropdown">
+            <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                About
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Blog</a></li>
+                <li><a class="dropdown-item" href="#">FAQs</a></li>
+            </ul>
+        </li>
+        <li><a href="#" class="nav-link px-2 link-dark">Contact</a></li>
 
     </ul>
+    <div class="logo-container row">
+        <div class="col request-appt-container">
+            <button type="button" class="btn btn-outline-light top-btns" (click)="route('estimate')">Request an
+                Estimate</button>
+        </div>
+        <div class="col request-appt-container">
+            <button type="button" class="btn btn-outline-light top-btns">Set an Appointment</button>
+        </div>
+    </div>
 
 
-
-</header>  
+</header>
