--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
-<app-hero></app-hero>
-<app-home></app-home>
+<!-- <app-hero></app-hero>
+<app-home></app-home> -->
+<router-outlet />
 <app-footer></app-footer>
