--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -6,6 +6,8 @@
 
 .btn {
     border: none;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .openStatus {
@@ -20,9 +22,19 @@
     /* Red color for closed status */
 }
 
-.hero-image{
+.closingSoonStatus {
+    color: orange;
+    font-weight: bold;
+}
+
+.hero-image {
     background-image: url('../../assets/hero-image.webp');
-    height: 600px; 
-    background-size: cover; 
+    height: 600px;
+    background-size: cover;
     background-position: center center;
+}
+
+.bold {
+    font-weight: bold;
+
 }
