--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,41 +1,76 @@
-.logo-container{
+.logo-container {
     text-align: center;
     margin: 0;
 }
 
-#logo{
+#logo {
     width: 250px;
     margin-top: 20px;
 }
 
-.request-bar-container{
+.request-bar-container {
     /* background-color: #2c0e3c; */
-    background-image: linear-gradient(90deg,#2e0e3f 0,#15051e 100%)!important;
+    background-image: linear-gradient(90deg, #2e0e3f 0, #15051e 100%) !important;
     height: 64px;
-    margin: 0;
-}
-
-.number-container{
     margin: auto;
 }
 
-.number-text{
-    color: #7b4797;
-    font-size: 24px;
+.request-appt-container {
+    margin: auto;
+}
+
+.request-appt-container button {
+    background-color: #7b4797;
+}
+
+.number-text {
+    color: #ffffff;
+    font-size: 20px;
     font-weight: bold;
+    margin: auto 0 auto 0;
+    padding: 0 15px 0 0;
 }
 
-.top-btns{
-    width: 50%;
+.top-btns {
     border-width: 2px;
+    width: 405px;
+    margin: 25px 0 25px 0;
 }
 
-.btn-container{
+.btn-container {
     margin: auto;
     text-align: center;
 
 }
 
-.bar{
+.bar {
     background-color: white;
+}
+
+.request-appt-container:first-child {
+    text-align: right;
+}
+
+.request-appt-container:last-child {
+    text-align: left;
+}
+
+.social-logos {
+    font-size: 24px;
+    color: #ffffff;
+    padding: 10px
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+}
+
+.phone-email {
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.links {
+    text-decoration: none;
 }
