--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,20 +21,7 @@
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Asphalt Services
-        </a>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Asphalt Paving Contractor</a></li>
-            <li><a class="dropdown-item" href="#">Driveway Paving</a></li>
-            <li><a class="dropdown-item" href="#">Driveway Resurfacing</a></li>
-            <li><a class="dropdown-item" href="#">Parking Lot Paving</a></li>
-            <li><a class="dropdown-item" href="#">Commercial Paving</a></li>
-            <li><a class="dropdown-item" href="#">Parking Lot Maintenance</a></li>
-            <li><a class="dropdown-item" href="#">Line Striping</a></li>
-        </ul>
-    </li>
+    <li><a (click)="route('asphalt-services')" class="nav-link px-2 link-secondary">Asphalt Services</a></li>
     <li class="nav-item dropdown">
         <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Hardscaping Services
