--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -1,5 +1,5 @@
 .mask {
-    background-color: rgb(0, 0, 0, .3);
+    background-color: rgb(0, 0, 0, .4);
     height: 100%;
     width: 100%;
 }
@@ -21,7 +21,7 @@
 }
 
 .hero-image{
-    background-image: url('../../assets/hero-image.webp');
+    // background-image: url('../../assets/hero-image.webp');
     height: 600px; 
     background-size: cover; 
     background-position: center center;
