--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+<app-hero title="Exceptional Asphalt Paving Services" imageUrl="../../assets/hero-image.webp"></app-hero>
+
 <div class="px-4 pt-5 mb-5 text-center">
     <h1 class="display-4 fw-bold content-header">Full-Service Asphalt Paving Company Westchester County, NY & Rockland County, NY</h1>
     <div class="col-lg-6 mx-auto">
