--- a/src/app/estimate/estimate.component.html
+++ b/src/app/estimate/estimate.component.html
@@ -51,7 +51,7 @@
                     </div>
                     <!-- You may add your CAPTCHA code here -->
                     <div>
-                        <input type="submit" value="Send Us a Message">
+                        <input type="submit" value="Send Us a Message" (click)="sendEmail()">
                     </div>
                 </form>
             </div>
