--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center cards">
     <div class="col">
         <div class="card-body">
-          <img src="../../assets/driveway-paving.webp" alt="">
+          <img src="../../assets/driveway-paving-small.webp" alt="">
           <h1 class="card-title pricing-card-title m-3">Driveway Paving</h1>
           <p class="card-text m-3">Get a 1-year residential driveway warranty from Kings Highway Asphalt. We're open seven days a week.</p>
           <button type="button" class="w-100 btn btn-lg card-btn">Learn More</button>
