--- a/src/app/hardscaping-services/hardscaping-services.component.scss
+++ b/src/app/hardscaping-services/hardscaping-services.component.scss
@@ -43,6 +43,7 @@
   
   /* Apply two columns if there are more than four items */
   ul.list-unstyled.multi-column {
+    margin-left: 30px;
     list-style-type: disc;
     -moz-column-count: 2;
     -webkit-column-count: 2;
