--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -1,1 +1,86 @@
 <app-hero title="Kings Highway Asphalt Customer Reviews" imageUrl="../../assets/roller2.webp"></app-hero>
+
+<div class="p-4 m-5 clearfix graph-star-rating">
+    <h5 class="mb-0 mb-4">Ratings and Reviews</h5>
+    <div class="graph-star-rating-header">
+        <div class="star-rating">
+            <a href="#"><i class="icofont-ui-rating active"></i></a>
+            <a href="#"><i class="icofont-ui-rating active"></i></a>
+            <a href="#"><i class="icofont-ui-rating active"></i></a>
+            <a href="#"><i class="icofont-ui-rating active"></i></a>
+        </div>
+    </div>
+    <div class="graph-star-rating-body">
+        <div class="rating-list">
+            <div class="rating-list-left text-black">
+                5 Star
+            </div>
+            <div class="rating-list-center">
+                <div class="progress">
+                    <div style="width: 88%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar">
+                    </div>
+                </div>
+            </div>
+            <div class="rating-list-right text-black">88%</div>
+        </div>
+        <div class="rating-list">
+            <div class="rating-list-left text-black">
+                4 Star
+            </div>
+            <div class="rating-list-center">
+                <div class="progress">
+                    <div style="width: 12%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar">
+                    </div>
+                </div>
+            </div>
+            <div class="rating-list-right text-black">12%</div>
+        </div>
+        <div class="rating-list">
+            <div class="rating-list-left text-black">
+                3 Star
+            </div>
+            <div class="rating-list-center">
+                <div class="progress">
+                    <div style="width: 0%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar">
+                    </div>
+                </div>
+            </div>
+            <div class="rating-list-right text-black">0%</div>
+        </div>
+        <div class="rating-list">
+            <div class="rating-list-left text-black">
+                2 Star
+            </div>
+            <div class="rating-list-center">
+                <div class="progress">
+                    <div style="width: 0%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar">
+
+                    </div>
+                </div>
+            </div>
+            <div class="rating-list-right text-black">0%</div>
+        </div>
+    </div>
+</div>
+<div class="bg-white rounded shadow-sm p-4restaurant-detailed-ratings-and-reviews">
+    <div *ngFor="let review of reviews" class="reviews-members pt-4 pb-4">
+        <div class="media">
+            <a href="#"><img alt="Generic placeholder image" src="http://bootdey.com/img/Content/avatar/avatar{{review.stars}}.png" class="mr-3 rounded-pill"></a>
+            <div class="media-body">
+                <div class="reviews-members-header">
+                    <span class="star-rating float-right">
+                        <a href="#" *ngFor="let star of [].constructor(review.stars); let i = index"><i class="fa-solid fa-star star"></i></a>
+                        <a href="#" *ngFor="let star of [].constructor(5 - review.stars); let i = index"><i class="fa-solid fa-star star"></i></a>
+                    </span>
+                    <h6 class="mb-1"><a class="text-black" href="#">{{ review.name }}</a></h6>
+                    <p class="text-gray">Review Date</p> <!-- You might want to add actual review dates if available -->
+                </div>
+                <div class="reviews-members-body">
+                    <p>{{ review.review }}</p>
+                </div>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <a class="text-center w-100 d-block mt-4 font-weight-bold" href="#">See All Reviews</a>
+</div>
