--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,1 +1,18 @@
 <app-hero title="Kings Highway Asphalt Gallery" imageUrl="../../assets/gallery.webp"></app-hero>
+
+<div class="container mt-4">
+    <div class="row text-center">
+      <div class="col-12">
+        <h2>Take a Look at the Photos of Our Recent Masonry and Driveway Paving Projects</h2>
+        <p>Kings Highway Asphalt has been an area favorite since 2012. We provide exceptional asphalt services in Westchester County, NY and surrounding areas. <a href="#">Contact us</a> seven days a week for a FREE estimate.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 mb-3" *ngFor="let image of images">
+        <div class="image-container">
+          <img [src]="image.src" [alt]="image.alt">
+        </div>
+      </div>
+    </div>
+  </div>
+  
