--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,8 +30,9 @@
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
         <li><a (click)="route('asphalt-services')" class="nav-link px-2 link-secondary">Asphalt Services</a></li>
-        <li class="nav-item dropdown">
-            <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+        <li><a (click)="route('hardscaping-services')" class="nav-link px-2 link-secondary">Hardscaping Services</a></li>
+        <!-- <li class="nav-item dropdown">
+            <a (click)="route('hardscaping-services')" class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Hardscaping Services
             </a>
@@ -41,11 +42,12 @@
                 <li><a class="dropdown-item" href="#">Walkways & Steps</a></li>
                 <li><a class="dropdown-item" href="#">Masonry</a></li>
             </ul>
-        </li>
-        <li><a href="#" class="nav-link px-2 link-dark">Seal Coating</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Gallery</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Reviews</a></li>
-        <li class="nav-item dropdown">
+        </li> -->
+        <li><a (click)="route('sealcoating')" class="nav-link px-2 link-dark">Seal Coating</a></li>
+        <li><a (click)="route('gallery')" class="nav-link px-2 link-dark">Gallery</a></li>
+        <li><a (click)="route('reviews')" class="nav-link px-2 link-dark">Reviews</a></li>
+        <li><a (click)="route('about')" class="nav-link px-2 link-dark">About</a></li>
+        <!-- <li class="nav-item dropdown">
             <a class="nav-link link-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 About
@@ -54,8 +56,8 @@
                 <li><a class="dropdown-item" href="#">Blog</a></li>
                 <li><a class="dropdown-item" href="#">FAQs</a></li>
             </ul>
-        </li>
-        <li><a href="#" class="nav-link px-2 link-dark">Contact</a></li>
+        </li> -->
+        <li><a (click)="route('contact')" class="nav-link px-2 link-dark">Contact</a></li>
 
     </ul>
     <div class="logo-container row">
