--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <app-hero title="About Kings Highway Asphalt" imageUrl="../../assets/about.webp"></app-hero>
 
-<div class="container py-5">
+<div class="container pt-5">
     <div class="row">
       <!-- About Us Section -->
       <div class="col-md-6">
