--- a/src/app/estimate/estimate.component.html
+++ b/src/app/estimate/estimate.component.html
@@ -1,6 +1,6 @@
 <form>
     <div class="dmRespColsWrapper">
-        <div class="large-12 medium-12 small-12 dmRespCol">
+        <div class="large-12 medium-12 small-12 dmRespCol p-5">
             <div class="dmNewParagraph">
                 <h3>Request an Estimate</h3>
             </div>
