--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="text-center bg-image rounded-3 hero-image" style.background-image="../../assets/hero-image.webp">
   <div class="mask">
       <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white">
+          <div class="text-white m-5">
               <h1 class="mb-3">Exceptional Asphalt Paving Services</h1>
               <p class="mb-3">Free Same-Day Estimate | 1-Year Residential Driveway Warranty | 15 Years of Experience
               </p>
@@ -34,12 +34,12 @@
   </div>
 
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center cards">
-    <div class="col">
+    <div class="col mb-5">
         <div class="card-body">
           <img src="../../assets/driveway-paving-small.webp" alt="">
           <h1 class="card-title pricing-card-title m-3">Driveway Paving</h1>
           <p class="card-text m-3">Get a 1-year residential driveway warranty from Kings Highway Asphalt. We're open seven days a week.</p>
-          <button type="button" class="w-100 btn btn-lg card-btn">Learn More</button>
+          <button type="button" class="w-100 btn btn-lg card-btn" (click)="route('asphalt-services')">Learn More</button>
         </div>
     </div>
     <div class="col">
@@ -47,7 +47,7 @@
           <img src="../../assets/masonry-image.webp" alt="">
           <h1 class="card-title pricing-card-title m-3">Masonry</h1>
           <p class="card-text m-3">Prevent accidents with masonry from Kings Highway Asphalt. We'll repair sidewalks, driveways, and more. </p>
-          <button type="button" class="w-100 btn btn-lg card-btn">Learn More</button>
+          <button type="button" class="w-100 btn btn-lg card-btn" (click)="route('asphalt-services')">Learn More</button>
         </div>
     </div>
     <div class="col">
@@ -55,7 +55,7 @@
           <img src="../../assets/line-striping-image.webp" alt="">
           <h1 class="card-title pricing-card-title m-3">Line Striping</h1>
           <p class="card-text m-3">Revitalize your parking lot's appearance and safety with our precise and durable line striping services</p>
-          <button type="button" class="w-100 btn btn-lg card-btn">Learn More</button>
+          <button type="button" class="w-100 btn btn-lg card-btn" (click)="route('asphalt-services')">Learn More</button>
         </div>
     </div>
   </div>
@@ -118,7 +118,7 @@
             <div class="customer-reviews-section">
                 <h3 class="d-inline-block mb-4">Parking Lot Maintenance</h3>
                 <p class="mb-auto">Maintain a professional appearance for your business with parking lot maintenance from Kings Highway Asphalt. We can fill cracks, do resurfacing, and more.</p> 
-                <button class="btn card-btn mt-5">Learn More</button>
+                <button class="btn card-btn mt-5" (click)="route('asphalt-services')">Learn More</button>
             </div>
             <div class="col"></div>
   
