--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,7 +1,7 @@
 <div class="text-center bg-image rounded-3 hero-image" [style.background-image]="'url(' + imageUrl + ')'">
     <div class="mask">
         <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="text-white">
+            <div class="text-white m-5">
                 <h1 class="mb-3">{{ title }}</h1>
                 <p class="mb-3">Free Same-Day Estimate | 1-Year Residential Driveway Warranty | 15 Years of Experience
                 </p>
