--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -6,6 +6,7 @@
 #logo {
     width: 250px;
     margin-top: 20px;
+    cursor: pointer;
 }
 
 .request-bar-container {
@@ -33,7 +34,8 @@
 
 .top-btns {
     border-width: 2px;
-    width: 405px;
+    width: 100%;
+    max-width: 405px;
     margin: 10px 0 10px 0;
 }
 
@@ -218,3 +220,44 @@ span {
 .close-btn:hover {
     color: #333;
 }
+
+.header-hidden {
+    transform: translateY(-100%);
+    opacity: 0;
+    visibility: hidden;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in, visibility 0.3s ease-in;
+  }
+  
+  .bar {
+    transition: transform 0.3s ease-out, opacity 0.3s ease-out, visibility 0.3s ease-out;
+    will-change: transform, opacity, visibility;
+  }
+  
+
+
+
+
+
+  /* social-bar.component.scss */
+.container-fluid {
+    background-image: linear-gradient(90deg, #2e0e3f 0, #15051e 100%); /* Example color based on the uploaded image */
+  }
+  
+  a.text-light {
+    color: #ffffff;
+  }
+  
+  a.text-light:hover {
+    color: #9f9f9f; /* Lighten the color on hover */
+  }
+  
+  .fa {
+    font-size: 1.2rem; /* Adjust the size of the icons */
+  }
+  
+
+  
+
+  .social-text{
+    font-size: 20px;
+  }
